--- a/programs/asterizm-client/Cargo.toml
+++ b/programs/asterizm-client/Cargo.toml
@@ -15,8 +15,12 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build"]
+custom-heap = []
+custom-panic = []
+anchor-debug = []
 
 [dependencies]
-anchor-lang = "0.30.1"
+anchor-lang = "0.32.1"
+solana-program = "2.3.0"
 # hex = "*"
 # base64 = "*"
