--- a/programs/asterizm-native-token-example/Cargo.toml
+++ b/programs/asterizm-native-token-example/Cargo.toml
@@ -15,9 +15,11 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
+custom-heap = []
+custom-panic = []
+anchor-debug = []
 
 
 [dependencies]
-anchor-lang = "0.30.1"
-anchor-spl = "0.30.1"
-
+anchor-lang = "0.32.1"
+anchor-spl = "0.32.1"
