--- a/programs/asterizm-nft-example/Cargo.toml
+++ b/programs/asterizm-nft-example/Cargo.toml
@@ -15,9 +15,12 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
+custom-heap = []
+custom-panic = []
+anchor-debug = []
 
 [dependencies]
-anchor-lang = "0.30.1"
-# anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
-anchor-spl = { version = "0.30.1" , features = ["metadata"] }
-mpl-token-metadata = "4.1.0"
+anchor-lang = "0.32.1"
+# anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
+anchor-spl = { version = "0.32.1" , features = ["metadata"] }
+mpl-token-metadata = "5.1.1"
